# Multiplayer-Game

./: .gitignore  LICENSE.md  Procfile  README.md  config.json
client/: CMakeLists.txt  README  README.md  clientClass.py  main.py
client/fake_client/: configHandler.py  main.py
client/python_client/: clientClass.py  main.py  packet.py
client/src/: app.cpp  app.hpp  app_rendering.cpp  board.hpp  bot.hpp  config.hpp  glgui.hpp  glw.hpp  main.cpp  mesh.cpp  mesh.hpp  util.cpp  util.hpp
client/src/networking/: client.cpp  client.hpp  packet.hpp
server/: README.md  board-test.py  board.py  boardGenerator.py  bots.py  config.json  configHandler.py  game.py  gameServer.py  main.py  nsew.py  packet.py  server.py  utils.py
